# device-power-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_BACKUP_INFO.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.bat  setup.py  streamlit_launcher.py  test_streamlit.py
.devcontainer/: devcontainer.json
database/: MD103 Breath 2025-10-02 0.csv  MD103 Color cycle 2025-10-02 0.csv  MD103 Flash 2025-10-02 0.csv  MD103 No light 2025-10-02 0.csv
docs/: gui_comparison.md  project_structure.md  使用指南.md
examples/: example_usage.py
scripts/: quick_start.py  run_gui.py  run_streamlit.py  start_analysis.bat
src/mouse_power_analyzer/: __init__.py  analyzer.py  cli.py  comparison_ui.py  error_handler.py  gui.py  result_controls.py  result_manager.py  streamlit_app.py  time_range_analyzer.py  time_range_ui.py  utils.py  visualizer.py
tests/: test_analyzer.py
